# itmo-llp-image-rotation

solution/: CMakeLists.txt
solution/include/: bmp.h  bmp_reader.h  bmp_writer.h  image.h  operations.h  rotator.h
solution/src/: bmp_reader.c  bmp_writer.c  image.c  main.c  operations.c  rotator.c
